--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gadgets Haven</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/favicon-16x16.png" />
+
   </head>
   <body>
     <div id="root"></div>
